# BMS-Business-Management-System-

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
doc/: Doxyfile
doc/html/: md__r_e_a_d_m_e.html  navtreedata.js  pages.html
doc/html/search/: all_1.js  pages_0.js  pages_2.js  searchdata.js
doc/latex/: md__r_e_a_d_m_e.tex
lib/: CMakeLists.txt
lib/net/: CMakeLists.txt
lib/net/include/: net.h
lib/net/src/: net.cpp
lib/roles/: CMakeLists.txt
lib/roles/include/: roles.h
lib/roles/src/: roles.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: utils.cpp
test/: CMakeLists.txt
test/roles/: CMakeLists.txt  roles.cpp
